load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "common.go",
        "generate.go",
        "live.go",
        "root.go",
        "seawatcherCmd.go",
        "snapshot.go",
    ],
    importpath = "github.com/benleb/gloomberg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/flotscmd",
        "//cmd/oncecmd",
        "//internal",
        "//internal/collections",
        "//internal/config",
        "//internal/degendb/degendata",
        "//internal/gbl",
        "//internal/nemo/gloomberg",
        "//internal/nemo/provider",
        "//internal/nemo/token",
        "//internal/nemo/totra",
        "//internal/nemo/wallet",
        "//internal/nemo/watch",
        "//internal/nepa",
        "//internal/opensea",
        "//internal/pusu",
        "//internal/seawa",
        "//internal/seawa/models",
        "//internal/stats",
        "//internal/style",
        "//internal/ticker",
        "//internal/trapri",
        "//internal/utils",
        "//internal/utils/wwatcher",
        "//internal/web",
        "//internal/ws",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_charmbracelet_log//:log",
        "@com_github_ethereum_go_ethereum//accounts",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_miguelmota_go_ethereum_hdwallet//:go-ethereum-hdwallet",
        "@com_github_muesli_termenv//:termenv",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_redis_rueidis//:rueidis",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
