load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["const.go"],
    importpath = "github.com/benleb/gloomberg/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_charmbracelet_log//:log",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_spf13_viper//:viper",
    ],
)
