load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "abis",
    srcs = [
        "ERC1155.go",
        "ERC165.go",
        "ERC20.go",
        "ERC721.go",
        "ERC721v3.go",
        "OpenSea.go",
        "Proxy.go",
        "foundation.go",
        "seaport.go",
        "weth.go",
    ],
    importpath = "github.com/benleb/gloomberg/internal/abis",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//event",
    ],
)
