load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "degendb",
    srcs = [
        "collection.go",
        "degen.go",
        "degendb.go",
        "fileHandler.go",
        "token.go",
        "wallet.go",
    ],
    importpath = "github.com/benleb/gloomberg/internal/degendb",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_charmbracelet_log//:log",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_klauspost_compress//zstd",
        "@com_github_spf13_viper//:viper",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
