load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "nemo",
    srcs = [
        "addresscollection.go",
        "buy.go",
        "gasinfo.go",
        "metadata.go",
    ],
    importpath = "github.com/benleb/gloomberg/internal/nemo",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_ethereum_go_ethereum//common"],
)
