load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pusu",
    srcs = ["pusu.go"],
    importpath = "github.com/benleb/gloomberg/internal/pusu",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal",
        "//internal/gbl",
        "//internal/nemo/gloomberg",
        "//internal/nemo/osmodels",
        "//internal/nemo/totra",
        "//internal/trapri",
        "@com_github_charmbracelet_log//:log",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_redis_rueidis//:rueidis",
    ],
)
