load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "trapri",
    srcs = [
        "collection_offer.go",
        "eventHandler.go",
        "item_listed.go",
        "item_received_bid.go",
        "listings.go",
        "trapri.go",
    ],
    importpath = "github.com/benleb/gloomberg/internal/trapri",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal",
        "//internal/collections",
        "//internal/external",
        "//internal/gbl",
        "//internal/nemo/collectionsource",
        "//internal/nemo/gloomberg",
        "//internal/nemo/marketplace",
        "//internal/nemo/osmodels",
        "//internal/nemo/price",
        "//internal/nemo/standard",
        "//internal/nemo/token",
        "//internal/nemo/tokencollections",
        "//internal/nemo/totra",
        "//internal/notify",
        "//internal/opensea",
        "//internal/seawa",
        "//internal/seawa/models",
        "//internal/style",
        "//internal/ticker",
        "//internal/utils",
        "//internal/utils/wwatcher",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_charmbracelet_log//:log",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_spf13_viper//:viper",
    ],
)
