load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "http.go",
        "utils.go",
    ],
    importpath = "github.com/benleb/gloomberg/internal/utils",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal",
        "//internal/gbl",
        "//internal/nemo/topic",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//params",
        "@com_github_spf13_viper//:viper",
        "@org_golang_x_net//http2",
    ],
)
