load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "erc20",
    srcs = ["erc20.go"],
    importpath = "github.com/benleb/gloomberg/internal/abis/erc20",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//event",
    ],
)
