load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "degendata",
    srcs = ["degendata.go"],
    importpath = "github.com/benleb/gloomberg/internal/degendb/degendata",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/degendb",
        "//internal/nemo/gloomberg",
        "//internal/opensea",
        "//internal/style",
        "@com_github_charmbracelet_log//:log",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_spf13_viper//:viper",
    ],
)
